<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_matches"
        android:icon="@drawable/ic_matches"
        android:title="@string/title_nav_matches"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_teams"
        android:icon="@drawable/ic_teams"
        android:title="@string/title_nav_teams"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorites"
        android:title="@string/title_nav_favorites"
        android:enabled="true"
        app:showAsAction="ifRoom" />

</menu>